# camera

./: .gitignore  README.md  gradle.properties  readme  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: camera.frag.spv  camera.vert.spv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  vulkan_context.cpp  vulkan_context.h
app/src/main/res/values/: strings.xml
app/src/main/shaders/: camera.frag  camera.vert  ui.frag
